# inlg2025.github.io

./: .gitignore  Dockerfile  Makefile  README.md  building.txt  main.py  mypy.ini  package-lock.json  pyproject.toml  requirements-dev.txt
.github/workflows/: static.yml
sitedata/: Home.md  accepted_papers.md  awards.md  banquet.md  call_for_genchal.md  call_for_workshop.md  calls.yml  cfp.md  cfp_tutorials.md  committee.yml  config.yml  faq.yml  keynotes.md  local_info.md  presentation_manual.md  program.md  registration.md  resource_statement.md  sitemap.xml  sponsor.md  sponsor_ja.md  sponsors.yml  tutorials.yml  tutorials_LLMMedicine.md  tutorials_LLMSocialScience.md  tutorials_VisualContext.md  tutorials_Werewolf.md  tutorials_YoungResearcher.md
static/css/: main.css  markdown.css
templates/: base.html  calls.html  components.html  faq.html  index.html  organizers.html  registration.html  single_md.html  tutorials.html
