[tool.poetry]
name = "inlg2024-github-io"
version = "0.1.0"
description = ""
authors = ["inlg"]
license = "MIT"
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
frozen-flask = "^1.0.2"
tqdm = "^4.66.2"
pyyaml = "^6.0.1"
markdown = "^3.6"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
